# deep-chatbot

./: .gitignore  CLAUDE.md  Makefile  README.md  dev.sh  start-backend.sh  start-frontend.sh  start.sh
backend/: CLAUDE.md  README.md  alembic.ini  database.py  main.py  models.py  pyproject.toml  test_api.sh  test_message.json  test_note.json  test_plan.json
backend/agents/: __init__.py  config.py  deep_agent.py  sub_agents.py
backend/alembic/: env.py
backend/alembic/versions/: 641fc064c0c0_add_plan_and_note_models_for_per_thread_.py  73ff85646b19_initial_migration_thread_and_message_.py
backend/src/: __init__.py
backend/src/application/: __init__.py
backend/src/application/conversation/: __init__.py
backend/src/application/conversation/dtos/: chat_request.py  chat_response.py  thread_history_response.py
backend/src/application/conversation/use_cases/: get_thread_history.py  send_message.py  stream_chat.py
backend/src/application/memory/: __init__.py
backend/src/application/memory/dtos/: note_request.py  note_response.py
backend/src/application/planning/: __init__.py
backend/src/domain/: __init__.py
backend/src/domain/agent_orchestration/: __init__.py
backend/src/domain/conversation/: __init__.py
backend/src/domain/memory/: __init__.py
backend/src/domain/planning/: __init__.py
backend/src/infrastructure/: __init__.py
backend/src/infrastructure/llm/: __init__.py
backend/src/presentation/: __init__.py
backend/src/presentation/api/: main.py
backend/tools/: __init__.py  custom_tools.py  file_tools.py  planning_tools.py
(+72 files in other folders)
