[project]
name = "deep-chatbot"
version = "0.1.0"
description = ""
authors = [
    {name = "jaimemuleromolinet",email = "jmulero@lunia.es"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.121.1,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "langgraph (>=1.0.2,<2.0.0)",
    "langchain (>=1.0.5,<2.0.0)",
    "langchain-anthropic (>=1.0.2,<2.0.0)",
    "langchain-openai (>=1.0.2,<2.0.0)",
    "langchain-ollama (>=1.0.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
