[tool.poetry]
name = "deep-chatbot"
version = "0.1.0"
description = ""
authors = ["jaimemuleromolinet <jmulero@lunia.es>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = ">=0.121.1,<0.122.0"
uvicorn = ">=0.38.0,<0.39.0"
langgraph = ">=1.0.2,<2.0.0"
langgraph-checkpoint-sqlite = ">=3.0"
langchain = ">=1.0.5,<2.0.0"
langchain-anthropic = ">=1.0.2,<2.0.0"
langchain-openai = ">=1.0.2,<2.0.0"
langchain-ollama = ">=1.0.0,<2.0.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.44"}
alembic = ">=1.13.0,<2.0.0"
aiosqlite = ">=0.19.0,<1.0.0"
greenlet = ">=3.0.0,<4.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
